--- a/src/views/detalle_producto.html
+++ b/src/views/detalle_producto.html
@@ -37,7 +37,7 @@
                                 <h2 class="subtitulo_prod">PC Armada</h2>
                                 <img class="imagen_prod" src="img/hp.jpg" alt="img_hp">
                         </div><!--contenedor_imagen_principal-->     
-        <!--            </section><!--contenedor_imagenes-->  -->
+        <!--            </section><contenedor_imagenes>  -->
                     
                     <section class="box_contenedor_ofertas">
                     
