--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -15,24 +15,25 @@ body {
 
 
 /* HEADER TOP BAR */
-.logo2 img {
+
+
+.top-header {
     display: flex;
-    width:95px;
-    height: 85px;
-    margin: 10px 0px 10px 35%;
-   border-radius: 16px;
+    width: 90vw;
+}
+
+.logo2 img {
+    height: 70px;
+    margin-right: 40px;
+    border-radius: 16px;
     border: #7EFF00 0.5px solid;
     box-shadow:  -0.2rem -0.2rem 0.0rem -0.1rem #7EFF00;
 }
 
 .logo1 {
     display: none;
-    height: 85px;
-    width: 180px;
-    margin-left: 2%;
-    padding-left: 2%;
-    border-radius: 64%;
-    box-shadow: inset 0rem 3em 3em -2.8em #7eff00;
+    height: 100px;
+    position:relative
 }
 
 .search-bar {
@@ -44,7 +45,7 @@ body {
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 60px;
     padding: 10px 10px;
-    margin: auto
+    margin: auto;
 }
 
 .search-bar input {
@@ -77,6 +78,11 @@ body {
 
 
 .main-header-top-bar {
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    align-items: center;
     background-color: black;
     padding: 10px;
     width: 100%;
@@ -95,7 +101,7 @@ body {
     display: flex;
     align-items: baseline;
     width: 100%;
-    justify-content: flex-end;
+    justify-content: center;
     padding: 15px;
 }
 
@@ -105,7 +111,8 @@ body {
 }
 
 .badge:after {
-    content: attr(value); /* value is the number displayed next to the cart */
+    content: attr(value);
+    /* value is the number displayed next to the cart */
     font-size: 10px;
     background: red;
     border-radius: 50%;
@@ -271,18 +278,18 @@ img {
 
 footer {
     background-color: #000;
-    box-shadow: 0rem 0.6rem 3rem 0.3rem #7eff00;
-    margin-top: 10px;
+    box-shadow: 3px 3px 30px 5px  #7EFF00;
 }
 
-footer div h3 {
+.texto-redes {
     color: #fff;
     padding: 15px;
-    font-size: 15px;
+    font-size: 14px;
     text-align: center;
 }
 
 .redes {
+    border-top: 1px solid #cac7ff;
     border-bottom: 1px solid #4A4A4A;
     border-radius: 1px;
 }
@@ -306,16 +313,16 @@ footer div h3 {
 
 .informacion {
     display: flex;
+    flex-direction: column;
     height: 100%;
-    margin: auto;
-    max-width: 900px;
-    justify-content: space-between;
+    text-align: center;
 }
 
 .informacion ul li {
-    font-size: 10px;
+    font-size: 12px;
     color: #7EFF00;
     list-style-type: none;
+    justify-content: center;
 }
 
 .informacion ul li:hover {
@@ -328,8 +335,8 @@ footer div h3 {
 }
 
 .lista1 h4 {
-    color: #fff;
-    font-size: 12px;
+    color: #667;
+    font-size: 20px;
     padding-bottom: 8px;
 }
 
@@ -338,8 +345,8 @@ footer div h3 {
 }
 
 .lista2 h4 {
-    color: #fff;
-    font-size: 12px;
+    color: #667;
+    font-size: 20px;
     padding-bottom: 8px;
 }
 
@@ -348,9 +355,16 @@ footer div h3 {
 }
 
 .lista3 h4 {
-    color: #fff;
+    color: #667;
+    font-size: 20px;
+    padding-bottom: 10px;
+}
+
+.copyright {
+    color: #666666;
     font-size: 12px;
-    padding-bottom: 8px;
+    padding-top: 10px;
+    text-align: center;
 }
 /* WHATSAPP */
 .whatsapp{
@@ -372,18 +386,90 @@ footer div h3 {
     font-weight: bold;
 
 }
-
-@media (min-width: 767px) {
-    .nav-bar{
-        display:flex
-    }
-    .logo2 img {
-        display: none;
+@media (min-width: 361px){
+    .aclaracion {
+        font-size: 12px;
     }
     
+    .lista1 h4 {
+        padding-bottom: 10px;
+        font-size: 14px;
+    }
+    
+    .lista2 h4 {
+        padding-bottom: 10px;
+        font-size: 14px;
+    }
+    
+    .lista3 h4 {
+        padding-bottom: 10px;
+        font-size: 14px;
+    }
+}
+
+@media (min-width: 767px) {
+    .logo2 img {
+        display: none;
+        height: 100px;
+    }
+
     .logo1 {
         display: flex;
-       
+        height: 100px;
+        padding: 10px;
+        margin-bottom: 30px;
+    }
+
+    .main-header-top-bar {
+        display: flex;
+        flex-direction: row;
+        border-bottom: solid 1px #cac7ff;
+        padding: 15px;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+
+    }
+
+    .search-bar {
+        width: 50%;
+    }
+
+    .icons-top-bar {
+        display: flex;
+        align-items: flex-end;
+        width: 55%;
+        justify-content: flex-end;
+    }
+
+
+
+    .icons-top-bar a {
+        text-decoration: none;
+        color: #7EFF00;
+        font-size: 14px;
+    }
+
+    .burger-menu {
+        display: none;
+    }
+
+    .nav-bar {
+        display: flex
+    }
+
+    .banner img,
+    #right,
+    #left {
+        display: initial
+    }
+
+    .dots {
+        display: flex
+    }
+
+    .burger-menu {
+        display: none;
     }
 section{
     display: flex;
@@ -404,42 +490,6 @@ section p{
 .p-precio{
     margin-left: 12%;
 }
-    .main-header-top-bar {
-        display: flex;
-        
-        padding: 15px;
-        align-items: center;
-        justify-content: space-between;
-        width: 100%;
-
-    }
-
-    .icons-top-bar {
-        display: flex;
-        align-items: flex-end;
-        width: 40%;
-        justify-content: flex-end;
-    }
-
-    .search-bar {
-        width: 30%;
-    }
-
-    .icons-top-bar a {
-        text-decoration: none;
-        color: #7EFF00;
-        font-size: 14px;
-    }
-
-
-    .burger-menu {
-        display: none;
-    }
-
-    main {
-        width: 95%
-    }
-
 
     .productInfo {
         display: flex;
@@ -469,6 +519,36 @@ section p{
     }
     .boton-compra{
         max-width: 160px;
+    }
+    /*Footer*/
+    .informacion {
+        display: flex;
+        flex-direction: row;
+
+    }
+
+    .redes {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        border-bottom: 1px solid #4A4A4A;
+    }
+
+    .texto-redes {
+        padding: 20px;
+    }
+
+    .lista1 {
+        flex:3.33
+    }
+
+    .lista2{
+        flex:3.33
+    }
+
+    .lista3 {
+        flex:3.33
     }
 }
 
@@ -502,5 +582,11 @@ section p{
     }
     .p-precio{
         margin-left: 21%;
+    }
+     /*FOOTER*/
+
+     .informacion {
+        margin-left: 10px;
+        margin-right: 10px;
     }
 }
