--- a/src/views/productCart.html
+++ b/src/views/productCart.html
@@ -14,6 +14,7 @@
 <body>
     <header>
         <div class="main-header-top-bar">
+            <div class="top-header">
             <!-- <a href="./" class="logo"> Pixel!</a> LOGO ALTERNATIVO-->
             <a href="./" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
             <!-- logo-mobile -->
@@ -21,6 +22,7 @@
             <form action='https://www.google.com/search?q=' method="get" class="search-bar">
                 <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
                 <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+            </div>
             </form>
             <div class="icons-top-bar">
                 <a href="/login"><i class="fa-regular fa-user"></i> Ingresar</a>
@@ -64,7 +66,12 @@
             </a>
         </nav>
 
+       
+
+        </div>
+
     </header>
+
     <main>
         <h2>Mi carrito</h2>
         <article>
@@ -114,10 +121,10 @@
             <div class="redes">
 
                 <div>
-                    <h3>¡Seguinos en nuestras redes sociales!</h3>
+                    <h3 class="texto-redes">¡Seguinos en nuestras redes sociales!</h3>
                 </div>
                 <div class="iconos">
-                    <i class="fab fa-whatsapp"></i>
+                    <i class="fa-brands fa-facebook"></i>
                     <i class="fab fa-instagram"></i>
                     <i class="fab fa-twitter"></i>
                 </div>
@@ -147,7 +154,10 @@
                 </ul>
             </div>
 
-        </div>
+            <div class="copyright">
+                <p>Copyright © 2022 Pixel! E-commerce.</p>
+
+            </div>
 
         </div>
 
