detalle producto sin fondo

--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -81,18 +81,40 @@
         </header>
 <!--        <div class="contenedor_central"> -->
         <main class="contenedor_central">
-        <!--            <section class="contenedor_imagenes"> -->
+            <section class="subtitulo">
+                <h2 class="subtitulo_prod">PC Armada - Volver a la vista-></h2>
+            </section>
+            <section class="contenedor_imagenes">                         
                 <div class="contenedor_muestra">
                     <img class="box_muestra" src="img/hp.jpg" alt="img_hp">
                     <img class="box_muestra" src="img/hp.jpg" alt="img_hp">
                     <img class="box_muestra" src="img/hp.jpg" alt="img_hp">
                     <img class="box_muestra" src="img/hp.jpg" alt="img_hp">
                 </div>
-                <div class="contenedor_imagen_principal"></div>
-                        <h2 class="subtitulo_prod">PC Armada</h2>
-                        <img class="imagen_prod" src="img/hp.jpg" alt="img_hp">
+                <div class="contenedor_imagen_prod"></div>
+                    <img class="imagen_prod" src="img/hp.jpg" alt="img_hp">
                 </div><!--contenedor_imagen_principal-->
-        <!--   </section>contenedor_imagenes-->
+                <div class="contenedor_texto_pago">
+                    <div class="box_texto_pago">
+                        <h3 class="subtitulo_texto_pago">Medios de Pago</h3>
+                        <p class="texto_pago">Lorem ipsum dolor sit amet.</p>
+                        <p class="texto_pago">Quam nobis ad aut possimus?</p>
+                    </div>
+                   
+                    <div class="box_texto_pago">
+                        <h3 class="subtitulo_texto_pago">Formas de Pago</h3>
+                        <p class="texto_pago">Lorem ipsum dolor sit amet.</p>
+                        <p class="texto_pago">Quam nobis ad aut possimus?</p>
+                    </div>
+                    <div class="box_texto_pago">
+                        <h3 class="subtitulo_texto_pago">Comprar</h3>
+                        <p class="texto_pago">Lorem ipsum dolor sit amet.</p>
+                        <p class="texto_pago">Quam nobis ad aut possimus?</p>
+                    </div>
+                    <button class="btn_compra">COMPRAR</button>
+
+                </div>
+           </section><!--contenedor_imagenes -->
                 <section class="box_contenedor_ofertas">
                     <div class="box">
                                 <h3 class="h3_oferta">Ofertas</h3>
