--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -212,26 +212,41 @@ h1.titulo{
     justify-content: center;
     background-color: gray;
 /*    background-color: #ebebeb; */ 
-    border: 5px dashed blue; 
+/*    border: 5px dashed blue;  */
 }
 /*
-main{
-   
+main{   }
+*/
+.subtitulo{
+    width: 100%;
+    height: auto;
+    background-color: white;
 }
-.central main{
-   
+.subtitulo_prod{
+    color: #667;
+    font-size: 24pt;
+    margin-left: 15%;
+    padding-top: 10px;
+    padding-bottom: 10px; 
 }
 .contenedor_imagenes{
+    display: flex;
+    flex-direction: row;
     width: 100%;
     height: auto;
     background-color: orange;
-    border: 2px solid violet;
-} */
-.no{justify-content: center;}
+/*    border: 2px solid violet; */
+} 
 .contenedor_muestra{
     width: 20%;
     height: 100%;
-    background-color: yellow;
+    background-color: white;
+}
+.box_muestra{
+    width: 100px;
+    height: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 /*
 .img_muestra{
@@ -240,32 +255,48 @@ main{
     margin: 0 auto;
     padding: 0;
 }
-*/
-.box_muestra{
-    width: 100px;
-    height: auto;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
 
-.contenedor_imagen_principal{
+.contenedor_imagen_prod{
     width: 60%;
     height: auto;
-    margin: 0 auto;
-    padding: 10px;
-/*    border: 5px dashed blue; */
-}
-.subtitulo_prod{
-    background-color: red;
-    margin-left: 15%; 
-}
+}*/
 .imagen_prod{
-    width: 40%;
+    width: 50%;
+    height: auto; 
+    margin: 0px; /* 0 auto;*/
+    padding: 0px;
+/*    margin-left: 15%;  */
+}
+.contenedor_texto_pago{
+    width: 60%;
     height: auto;
-    margin-left: 15%;
+    padding-top: 20px;
+    background-color: white;
+}
+.box_texto_pago{
+    margin-top: 20px;
+    margin-bottom: 30px;
+    border-top: 2px solid #667;
+}
+.subtitulo_texto_pago{
+    font-size: 20pt;
+    color: #667;
+}
+.texto_pago{
+    font-size: 14pt;
+    color: #000;
+    margin-bottom: 10px;
+}
+.btn_compra{
+    background-color: cyan;
+    width: 200px;
+    height: auto;
+    border-radius: 7px;
+    font-size: 20pt;
+    color: white;
 }
 
-section.box_contenedor_ofertas{
+.box_contenedor_ofertas{
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -286,6 +317,7 @@ section.box_contenedor_ofertas{
 .h3_oferta{
     color: red;
     font-size: 18pt;
+    letter-spacing: 5px;
     text-align: center;
     margin-top: 5px;
 }
@@ -298,13 +330,23 @@ section.box_contenedor_ofertas{
 .nombre_oferta{
     font-size: 20pt;
     color: black;
+    font-weight: bold;
+    text-align: center;
 }
 
-section.contenedor_descripcion_prod{
+.contenedor_descripcion_prod{
     width: 100%;
     height: auto;
     background-color: #000;
     padding-left: 5%; 
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+.titulo_descripcion_prod{
+    font-size: 20pt;
+    letter-spacing: 7px;
+    color: #ebebeb;
+    padding-bottom: 15px; 
 }
 p.desc{
     color: #7EFF00;
