--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -150,7 +150,7 @@ h1.titulo{
     left: -4px;
     top: -16px;
     opacity: 0.9;
-}
+} 
 
 /* NAVIGATION BAR */
 
@@ -206,11 +206,10 @@ h1.titulo{
 .contenedor_central{
 /*    display: flex;  */
     width: 70%;
-    height: auto;
+    height: 70%;
     margin: 0 auto;
-    padding: 0; 
+    padding: 15px; 
     justify-content: center;
-    background-color: gray;
 /*    background-color: #ebebeb; */ 
 /*    border: 5px dashed blue;  */
 }
@@ -220,7 +219,7 @@ main{   }
 .subtitulo{
     width: 100%;
     height: auto;
-    background-color: white;
+    background: #4E4D4D;
 }
 .subtitulo_prod{
     color: #667;
@@ -234,19 +233,20 @@ main{   }
     flex-direction: row;
     width: 100%;
     height: auto;
-    background-color: orange;
+    background: #4E4D4D;
 /*    border: 2px solid violet; */
 } 
 .contenedor_muestra{
     width: 20%;
     height: 100%;
-    background-color: white;
+    background: #4E4D4D;
 }
 .box_muestra{
     width: 100px;
     height: auto;
     margin-top: 5px;
     margin-bottom: 5px;
+    border: red solid 2px;
 }
 /*
 .img_muestra{
@@ -262,7 +262,7 @@ main{   }
 }*/
 .imagen_prod{
     width: 50%;
-    height: auto; 
+    height: 70%; 
     margin: 0px; /* 0 auto;*/
     padding: 0px;
 /*    margin-left: 15%;  */
@@ -271,7 +271,8 @@ main{   }
     width: 60%;
     height: auto;
     padding-top: 20px;
-    background-color: white;
+    padding-left: 15px;
+    background: #4E4D4D;
 }
 .box_texto_pago{
     margin-top: 20px;
@@ -289,7 +290,6 @@ main{   }
 }
 .btn_compra{
     background-color: cyan;
-    width: 200px;
     height: auto;
     border-radius: 7px;
     font-size: 20pt;
@@ -464,6 +464,20 @@ footer {
 
 
 @media (min-width: 361px) {
+
+    .box_muestra0{
+        display: flex;
+        justify-content: center;
+    }
+    .box_muestra1{
+        display: none;
+    }
+    .box_muestra2{
+        display: none;
+    }
+    .box_muestra3{
+        display: none;
+    }
 
 
     .products {
