--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -85,12 +85,6 @@
                 <h2 class="subtitulo_prod">PC Armada - Volver a la vista-></h2>
             </section>
             <section class="contenedor_imagenes">                         
-                <div class="contenedor_muestra">
-                    <img class="box_muestra" src="img/hp.jpg" alt="img_hp">
-                    <img class="box_muestra" src="img/hp.jpg" alt="img_hp">
-                    <img class="box_muestra" src="img/hp.jpg" alt="img_hp">
-                    <img class="box_muestra" src="img/hp.jpg" alt="img_hp">
-                </div>
                 <div class="contenedor_imagen_prod"></div>
                     <img class="imagen_prod" src="img/hp.jpg" alt="img_hp">
                 </div><!--contenedor_imagen_principal-->
@@ -146,13 +140,13 @@
                 </section><!--box_contenedor_ofertas-->
                     <section class="contenedor_descripcion_prod">
                         <h3 class="titulo_descripcion_prod">Descripción Producto</h3>
-                        <p class="desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae nam perspiciatis corporis impedit repellendus dolorem!</p>
-                        <p class="desc">Tempore fugit, consectetur velit eos consequatur sit! Beatae ullam commodi ex, accusantium distinctio nostrum incidunt.</p>
-                        <p class="desc">Quasi vel rem ut aspernatur ea dignissimos. Recusandae nihil illo perspiciatis est accusantium quas molestias!</p>
-                        <p class="desc">Porro reiciendis at nulla voluptatum impedit ad accusantium nobis eveniet esse animi illo, nisi aliquid.</p>
-                        <p class="desc">Hic, nam. Corporis sunt repudiandae error debitis fugiat, ipsa esse obcaecati, itaque eveniet deleniti culpa.</p>
-                        <p class="desc">Atque impedit, esse ex est voluptate, mollitia quasi eum ipsam, dolor sunt nihil facilis tempore?</p>
-                        <p class="desc">Labore, perferendis nulla iusto saepe reprehenderit nobis illum explicabo iure consequuntur. Voluptates numquam quas commodi.</p>
+                        <p class="desc">Lorem ipsum dolor  sitamet consectetur adipisicing elit. Recusandae!</p>
+                        <p class="desc">Tempore fugit, consectetusit! Beatae ullex, accusantium distinctio nostrum incidunt.</p>
+                        <p class="desc">Quasi vel rem ut aspernatur ea dignissimos.tis est accusantium quas molestias!</p>
+                        <p class="desc">Porro reiciendis at nulla vntium nobis eveniet esse animi illo, nisi aliquid.</p>
+                        <p class="desc">Hic, nam. Corporiis fugiat, ipsa esse obcaecati, itaque eveniet deleniti culpa.</p>
+                        <p class="desc">Atque impedit, esse ex es ipsam, dolor sunt nihil facilis tempore?</p>
+                        <p class="desc">Labore, perferendis nulla ilum explictes numquam quas commodi.</p>
                     </section>
         </main>
 <!--        <footer class="pie_de_pagina">
