Agrego links a las imagenes del index

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -87,7 +87,16 @@
             <h2>LO MEJOR DEL DÍA</h2>
             <div class="products">
                 <article>
-                    <img src="/img/asus.jpg" alt="producto">
+                <a href="/productDetail"><img src="/img/asus.jpg" alt="producto"></a>
+                <div class="productInfo">
+                    <p class="price">$59.99</p>
+                    <p class="discount">25% off</p>
+                    <p class="description">Laptop</p>
+                </div>
+            </article>
+
+                <article>
+                    <a href="/productDetail"><img src="/img/lenovo.jpg" alt="producto"></a>
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
@@ -96,7 +105,7 @@
                 </article>
 
                 <article>
-                    <img src="/img/lenovo.jpg" alt="producto">
+                    <a href="/productDetail"><img src="/img/hp.jpg" alt="producto"></a>
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
@@ -105,16 +114,7 @@
                 </article>
 
                 <article>
-                    <img src="/img/hp.jpg" alt="producto">
-                    <div class="productInfo">
-                        <p class="price">$59.99</p>
-                        <p class="discount">25% off</p>
-                        <p class="description">Laptop</p>
-                    </div>
-                </article>
-
-                <article>
-                    <img src="/img/bangho.jpg" alt="producto">
+                    <a href="/productDetail"><img src="/img/bangho.jpg" alt="producto"></a>
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
@@ -128,7 +128,7 @@
             <h2>RECOMENDACIONES</h2>
             <div class="products">
                 <article>
-                    <img src="/img/asus.jpg" alt="producto">
+                    <a href="/productDetail"><img src="/img/asus.jpg" alt="producto"></a>
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
@@ -137,7 +137,7 @@
                 </article>
 
                 <article>
-                    <img src="/img/lenovo.jpg" alt="producto">
+                    <a href="/productDetail"><img src="/img/lenovo.jpg" alt="producto"></a>
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
@@ -146,7 +146,7 @@
                 </article>
 
                 <article>
-                    <img src="/img/hp.jpg" alt="producto">
+                    <a href="/productDetail"><img src="/img/hp.jpg" alt="producto"></a>
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
@@ -155,7 +155,7 @@
                 </article>
 
                 <article>
-                    <img src="/img/bangho.jpg" alt="producto">
+                    <a href="/productDetail"><img src="/img/bangho.jpg" alt="producto"></a>
                     <div class="productInfo">
                         <p class="price">$59.99</p>
                         <p class="discount">25% off</p>
