--- a/public/css/productCart.css
+++ b/public/css/productCart.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: 'Roboto', Arial;
+    font-family: 'Lato', sans-serif;
     font-size: 12px;
     background-color:black;
 }
@@ -129,7 +129,7 @@ body {
     display:flex;
     justify-content: space-around;
     display: none;
-    box-shadow: 0rem 0.6rem 1rem 0.5rem #7EFF00;
+    box-shadow: 0rem 0.6rem 3rem 0.5rem #7EFF00;
 }
 
 .nav-bar a{
@@ -569,10 +569,8 @@ section p{
         max-width: 700px;
     }
 
-    .icons-top-bar {
-
-        width: 30%;
-    }
+    
+    
     section{
         margin-left: 27%;
     }
