--- a/public/css/register.css
+++ b/public/css/register.css
@@ -527,7 +527,7 @@ footer {
 }
 
 @media (min-width:361px) {
-
+    
     .caja-padre div input {
         font-size: 16px;
     }
@@ -607,6 +607,7 @@ footer {
     .nav-bar {
         display: flex;
         box-shadow: 0rem 0.6rem 3rem 0.5rem #7EFF00;
+        font-size: 13px;
     }
 
     /*MAIN* hola/
