--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -10,61 +10,18 @@ body {
     background-color: #080808;
   padding: 0;
 }
-
-/*
-.contenedor{
-    margin: 0 auto; 
-    padding: 0;
-}
-header{
-    display: flex;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 200px;
-    background-color: darkolivegreen;
-    justify-content: center;
-}
-h1.titulo{
-    font-size: 40pt;
-    color: chartreuse;
-}
-.logo{
-    display: flex;
-    align-items: center;
-}
-.logo img{
-   height: 100px 
-}*/
-/* HEADER TOP BAR */
-/* LOGO ALTERNATIVO */
-/* .logo { 
-    font-family: 'Press Start 2P';
-    letter-spacing: 2px;
-    color: #7EFF00;
-    padding: 10px 10px;
-    text-shadow: 0.2rem 0.5rem 0.5rem rgb(0, 0, 0);
-    font-size: 24px;
-    text-align: center;
-    -webkit-text-stroke: 1px darkgreen;
-} */
-
-
 .top-header {
     display: flex;
     width: 90vw;
 }
-
 .logo2 img {
     height: 70px;
     margin-right: 40px;
 }
-
 .logo1 {
     display: none;
     height: 100px;
 }
-
 .search-bar {
     display: flex;
     align-items: center;
@@ -76,7 +33,6 @@ h1.titulo{
     padding: 10px 10px;
     margin: auto;
 }
-
 .search-bar input {
     background-color: transparent;
     flex: 1;
@@ -86,16 +42,13 @@ h1.titulo{
     color: #cac7ff;
     padding: 5px
 }
-
 .search-bar input::placeholder {
     color: #cac7ff
 }
-
 .search-bar button i {
     font-size: 14px;
     color: #cac7ff
 }
-
 .search-bar button {
     border: 0;
     border-radius: 50%;
@@ -104,8 +57,6 @@ h1.titulo{
     background-color: rgba(128, 255, 0, 0.7);
     cursor: pointer;
 }
-
-
 .main-header-top-bar {
     background-color: rgb(0, 0, 0);
     display: flex;
@@ -115,9 +66,7 @@ h1.titulo{
     background-color: black;
     padding: 10px;
     width: 100%;
-
 }
-
 .icons-top-bar a {
     text-decoration: none;
     color: #7EFF00;
@@ -125,7 +74,6 @@ h1.titulo{
     align-items: center;
     padding: 10px
 }
-
 .icons-top-bar {
     display: flex;
     align-items: baseline;
@@ -133,12 +81,9 @@ h1.titulo{
     justify-content: center;
     padding: 15px;
 }
-
 .icons-top-bar a i {
     font-size: 18px;
-
 }
-
 .badge:after {
     content: attr(value);
     /* value is the number displayed next to the cart */
@@ -150,22 +95,18 @@ h1.titulo{
     left: -4px;
     top: -16px;
     opacity: 0.9;
-} 
-
+}
 /* NAVIGATION BAR */
-
 .nav-bar {
     display: flex;
     justify-content: space-around;
     display: none;
     box-shadow: 0rem 0.6rem 3rem 0.5rem #7EFF00;
 }
-
 .nav-bar a {
     text-decoration: none;
     color: #cac7ff;
 }
-
 .nav-bar-button {
     background-color: #4A4A4A;
     padding: 10px;
@@ -175,13 +116,10 @@ h1.titulo{
     border-radius: 15px;
     transition: all 400ms ease;
 }
-
 .nav-bar-button:hover {
     color: #4A4A4A;
     background-color: #7EFF00;
 }
-
-
 /* BURGUER MENU */
 .burger-menu {
     font-size: 1.5em;
@@ -194,7 +132,6 @@ h1.titulo{
     justify-content: center;
     align-items: center;
 }
-
 .burger-menu i {
     text-align: center;
     border-radius: 15%;
@@ -203,197 +140,99 @@ h1.titulo{
     color: #7EFF00;
     margin-bottom: 15px;
 }
+/*MAIN*/
 .contenedor_central{
-/*    display: flex;  */
-    width: 70%;
-    height: 70%;
+    width: 90%;
+    height: 80%;
+    padding: 25px;
     margin: 0 auto;
-    padding: 15px; 
+    margin-top:20px;
+    margin-bottom: 20px;
+    border-top: 5px solid #7EFF00;
+    border-radius: 5px;
     justify-content: center;
-/*    background-color: #ebebeb; */ 
-/*    border: 5px dashed blue;  */
+    background-color: #4E4D4D;
 }
-/*
-main{   }
-*/
-.subtitulo{
-    width: 100%;
-    height: auto;
-    background: #4E4D4D;
-}
-.subtitulo_prod{
-    color: #667;
-    font-size: 24pt;
-    margin-left: 15%;
-    padding-top: 10px;
-    padding-bottom: 10px; 
-}
-.contenedor_imagenes{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: auto;
-    background: #4E4D4D;
-/*    border: 2px solid violet; */
-} 
-.contenedor_muestra{
-    width: 20%;
-    height: 100%;
-    background: #4E4D4D;
-}
-.box_muestra{
-    width: 100px;
-    height: auto;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    border: red solid 2px;
-}
-/*
-.img_muestra{
-    width: 25%;
-    height: auto;
-    margin: 0 auto;
-    padding: 0;
-}
-
-.contenedor_imagen_prod{
-    width: 60%;
-    height: auto;
-}*/
-.imagen_prod{
-    width: 50%;
-    height: 70%; 
-    margin: 0px; /* 0 auto;*/
-    padding: 0px;
-/*    margin-left: 15%;  */
-}
-.contenedor_texto_pago{
-    width: 60%;
-    height: auto;
-    padding-top: 20px;
-    padding-left: 15px;
-    background: #4E4D4D;
-}
-.box_texto_pago{
-    margin-top: 20px;
-    margin-bottom: 30px;
-    border-top: 2px solid #667;
-}
-.subtitulo_texto_pago{
-    font-size: 20pt;
-    color: #667;
-}
-.texto_pago{
-    font-size: 14pt;
-    color: #000;
+.subtitulo h2 {
+    color: #ffffff;
+    font-size: 15px;
+    font-weight: normal;
     margin-bottom: 10px;
 }
-.btn_compra{
-    background-color: cyan;
-    height: auto;
-    border-radius: 7px;
-    font-size: 20pt;
-    color: white;
-}
-
-.box_contenedor_ofertas{
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: auto;
-    background-color: #000;
-/*    border: 5px solid pink;  */  
-    justify-content: space-around;
-}
-
-.box{
-    width: 27%;
-    height: auto;
-    background-color: white;
+.imagen_prod{
+    width: 95%;
+    border-radius: 5px;
     border: 2px solid black;
-    box-sizing: border-box;  
- /*   align-items: center; */
 }
-.h3_oferta{
-    color: red;
-    font-size: 18pt;
-    letter-spacing: 5px;
+.vistas{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+.vista {
+    width: 29%;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 5px;
+}
+.contenedor_imagen_prod{
+    display: flex;
+    justify-content: center;
+}
+.box_texto_pago{
     text-align: center;
-    margin-top: 5px;
+    border-bottom: 1px solid #4c9800;
 }
-.img_oferta{
-    width: 50px;
-    height: auto;
-    margin:0 auto;
-
+.texto_pago{
+    margin-bottom: 10px;
 }
-.nombre_oferta{
-    font-size: 20pt;
-    color: black;
-    font-weight: bold;
+.contenedor_texto_pago h3{
+    margin-top: 10px;
+}
+.precio-producto{
+    font-size: 20px;
     text-align: center;
+    padding-bottom: 10px;
 }
-
-.contenedor_descripcion_prod{
-    width: 100%;
-    height: auto;
-    background-color: #000;
-    padding-left: 5%; 
-    padding-top: 20px;
+.descripcion-producto{
     padding-bottom: 30px;
 }
-.titulo_descripcion_prod{
-    font-size: 20pt;
-    letter-spacing: 7px;
-    color: #ebebeb;
-    padding-bottom: 15px; 
+.descripcion-producto p{
+    color: #a5a4a4;
+    text-align: center;
 }
-p.desc{
-    color: #7EFF00;
-    font-size: 16pt;
+.boton-comprar{
+    display: flex;
+    justify-content: center;
+    margin-top: -10px;
+    padding-bottom: 15px;
 }
-
-h3.titulo_descrip_prod {
-    font-size: 22pt;
-    color: #667;
-/*    color: white; */
-}
-/*
-.pie_de_pagina{
-    background-color: darkolivegreen;
+.comprar {
+    height: 30px;
     width: 100%;
-    height: 300px;
-    margin: 0;
-    padding:0;
+    background-color: #7EFF00;
+    border: none;
+    border-radius: 5px;
 }
-p.texto_final{
-    font-size: 22pt;
-    color: #ebebeb;
-}
-*/
+/*FOOTER*/
 footer {
     background-color: #000;
     box-shadow: 3px 3px 30px 5px  #7EFF00;
 }
-
 .texto-redes {
     color: #fff;
     padding: 15px;
     font-size: 14px;
     text-align: center;
 }
-
 .redes {
     border-top: 1px solid #cac7ff;
     border-bottom: 1px solid #4A4A4A;
     border-radius: 1px;
 }
-
 .iconos {
     text-align: center;
 }
-
-
 .iconos i {
     color: white;
     padding: 5px;
@@ -401,132 +240,92 @@ footer {
     margin-bottom: 5px;
     transition: all 0.3s;
 }
-
 .iconos i:hover {
     color: #7EFF00;
 }
-
 .informacion {
     display: flex;
     flex-direction: column;
     height: 100%;
     text-align: center;
 }
-
 .informacion ul li {
     font-size: 12px;
     color: #7EFF00;
     list-style-type: none;
     justify-content: center;
 }
-
 .informacion ul li:hover {
     text-decoration: underline;
 }
-
 .lista1 {
     padding: 15px;
     padding-left: 20px;
 }
-
 .lista1 h4 {
     color: #667;
     font-size: 20px;
     padding-bottom: 8px;
 }
-
 .lista2 {
     padding: 15px;
 }
-
 .lista2 h4 {
     color: #667;
     font-size: 20px;
     padding-bottom: 8px;
 }
-
 .lista3 {
     padding: 15px;
 }
-
 .lista3 h4 {
     color: #667;
     font-size: 20px;
     padding-bottom: 10px;
 }
-
 .copyright {
     color: #666666;
     font-size: 12px;
     padding-top: 10px;
     text-align: center;
 }
-
-
 @media (min-width: 361px) {
-
-    .box_muestra0{
-        display: flex;
-        justify-content: center;
-    }
-    .box_muestra1{
-        display: none;
-    }
-    .box_muestra2{
-        display: none;
-    }
-    .box_muestra3{
-        display: none;
-    }
-
-
     .products {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
-
     .products article {
-
         width: 48%
     }
 }
-
 /*FOOTER*/
-
 .aclaracion {
     font-size: 12px;
 }
-
 .lista1 h4 {
     padding-bottom: 10px;
     font-size: 14px;
 }
-
 .lista2 h4 {
     padding-bottom: 10px;
     font-size: 14px;
 }
-
 .lista3 h4 {
     padding-bottom: 10px;
     font-size: 14px;
 }
-
 @media (min-width: 767px) {
-
     .logo2 img {
         display: none;
         height: 100px;
     }
-
     .logo1 {
         display: flex;
         height: 100px;
         padding: 10px;
         margin-bottom: 30px;
     }
-
     .main-header-top-bar {
         display: flex;
         flex-direction: row;
@@ -536,114 +335,84 @@ footer {
         justify-content: space-between;
         width: 100%;
     }
-
     .search-bar {
         width: 50%;
     }
-
     .icons-top-bar {
         display: flex;
         align-items: flex-end;
         width: 55%;
         justify-content: flex-end;
     }
-
     .icons-top-bar a {
         text-decoration: none;
         color: #7EFF00;
         font-size: 14px;
     }
-
     .burger-menu {
         display: none;
     }
-
     .nav-bar {
         display: flex
     }
-
     .banner img,
     #right,
     #left {
         display: initial
     }
-
     .dots {
         display: flex
     }
-
     .burger-menu {
         display: none;
     }
-
     main {
         width: 95%
     }
-
     .products {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
     }
-
     .products article {
-
         width: 23%
     }
-
     /*FOOTER*/
-
     .informacion {
         display: flex;
         flex-direction: row;
-
     }
-
     .redes {
         display: flex;
         justify-content: center;
         align-items: center;
-
         border-bottom: 1px solid #4A4A4A;
     }
-
     .texto-redes {
         padding: 20px;
     }
-
     .lista1 {
         flex:3.33
     }
-
     .lista2{
         flex:3.33
     }
-
     .lista3 {
         flex:3.33
     }
-
-
 }
-
 @media (min-width: 1020px) {
-
     .search-bar {
         width: 60%;
         max-width: 700px;
     }
-
     .search-bar input::placeholder {
         font-size: 14px;
     }
-
     .icons-top-bar {
-
         width: 40%;
     }
-
     /*FOOTER*/
-
     .informacion {
         margin-left: 10px;
         margin-right: 10px;
