--- a/src/views/productDetail.html
+++ b/src/views/productDetail.html
@@ -66,7 +66,7 @@
     <main>
         <div class="contenedor_central">
             <section class="subtitulo">
-                <h2>PC Armada - Volver a la vista</h2>
+                <h2>PC INTEL CELERON DUAL CORE G5905 SSD 240</h2>
             </section>
             <section>
                 <div class="contenedor_imagen_prod">
@@ -84,9 +84,7 @@
                     </div>
 
                     <div class="descripcion-producto">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi voluptates excepturi ex eaque
-                            illo explicabo dolorum hic alias adipisci, omnis nemo consectetur repudiandae, sapiente,
-                            ullam optio ipsa quidem distinctio quo.</p>
+                        <p>La laptop HP 245 sigue el ritmo de estilos de trabajo móviles gracias a un diseño delgado y ligero. La hermosa pantalla con su angosto borde y relación de pantalla y cuerpo grande brinda amplio espacio para trabajar o reproducir contenido.</p>
 
                     </div>
 
@@ -96,14 +94,12 @@
 
                     <div class="box_texto_pago">
                         <h3 class="subtitulo_texto_pago">Medios de Pago</h3>
-                        <p class="texto_pago">Lorem ipsum dolor sit amet.
-                            Quam nobis ad aut possimus?
+                        <p class="texto_pago"> Tarjetas de Credito,debito,Mercado Pago,Transferencia Bancaria
                         </p>
                     </div>
                     <div class="box_texto_pago">
                         <h3 class="subtitulo_texto_pago">Forma de retiro</h3>
-                        <p class="texto_pago">Lorem ipsum dolor sit amet.
-                            Quam nobis ad aut possimus?
+                        <p class="texto_pago">Por sucursal o Envio Gratuito a todo el pais
                         </p>
                     </div>
 
