--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -17,92 +17,7 @@
 </head>
 
 <body>
-    <header>
-        <div class="main-header-top-bar">
-            <div class="top-header">
-                <!-- <a href="./" class="logo"> Pixel!</a> LOGO ALTERNATIVO-->
-                <a href="./" class="logo1"> <img src="/img/pixel-logo.png" alt="logo"></a>
-                <!-- logo-mobile -->
-                <a href="./" class="logo2"> <img src="/img/logo-pixel-mobile.png" alt="logo"></a>
-                <form action='https://www.google.com/search?q=' method="get" class="search-bar">
-                    <input type="text" placeholder="Monitores, teclados, tarjetas de video" name="q">
-                    <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
-            </div>
-            </form>
-            <div class="icons-top-bar">
-                <a href="/login"><i class="fa-regular fa-user"></i> Ingresar</a>
-                <a href="/register">Registrarse</a>
-                <a href="/productCart"><i class="fa badge" style="font-size:24px" value=2>&#xf07a;</i></a>
-            </div>
-        </div>
-        <div class="burger-menu">
-            <i class="fa-solid fa-bars"></i>
-        </div>
-        <nav class="nav-bar">
-
-            <a href="#">
-                <div class="nav-bar-button">
-                    <p>Productos</p>
-                </div>
-            </a>
-
-            <a href="#">
-                <div class="nav-bar-button">
-                    <p>Arma tu PC</p>
-                </div>
-            </a>
-
-            <a href="#">
-                <div class="nav-bar-button">
-                    <p>PC listos</p>
-                </div>
-            </a>
-
-            <a href="#">
-                <div class="nav-bar-button">
-                    <p>Quiénes somos</p>
-                </div>
-            </a>
-
-            <a href="#">
-                <div class="nav-bar-button">
-                    <p>Ayuda</p>
-                </div>
-            </a>
-        </nav>
-
-        <main>
-            <!-- ingresa -->
-            <div class="mover">
-                <form action="/login" method="post" class="form-login">
-                    <h5>Iniciar sesión con mi email</h5>
-                    <!--<input class="cajita" type="checkbox" name="" value="">  -->
-                    <input class="controls" type="text" style="color: rgb(255, 255, 255) ;" name="usuario" value=""
-                        placeholder="Usuario" required minlength="3">
-                    <input class="controls" type="password" style="color: rgb(255, 255, 255);" name="contrasena"
-                        value="" placeholder="Contraseña" autocomplete="current-password" required minlength="3">
-                        <div class="texto-login">
-                    <a class="registrarme" ; padding: 6px;; href="/register"> Registrame</a>
-                    <a class="contraseña" ; href="#"> ¿Olvidaste tu Contraseña?</a>
-                </div>
-                    <div class="button-container">
-                        <a style="text-decoration: none;" href="/index"><button type="submit"
-                                style="color: #000;">LOGIN</button></a>
-                    </div>
-                    <p></p>
-                    <div class="social">
-                        <h5 class="google" style="padding-bottom: 32px">Ingresar con Google
-                            <i class="fab fa-google"></i>
-                        </h5>
-                        <h5 class="facebook" style="padding-bottom: 32px;">Ingresar con Facebook
-                            <i class="fab fa-facebook-square"></i>
-                        </h5>
-                    </div>
-                </form>
-            </div>
-
-        </main>
-    </header>
+    <%- include('./partials/header'); %>
     <div class="whatsapp">
         <a href="https://support.google.com/?hl=es"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
